# StudentsStorage

./: CMakeLists.txt  README.md
docs/: Календарный план разработки ИС.xlsx  Техническое задание.docx
libraries/: libboost_signals-vc140-mt-1_64.lib  libboost_signals-vc140-mt-s-1_64.lib  libboost_signals-vc140-s-1_64.lib  libboost_signals-vc141-mt-1_64.lib  libboost_signals-vc141-mt-s-1_64.lib  libboost_signals-vc141-s-1_64.lib  pqxx.lib
projFiles/DB/: ER-model.mwb  tp_db.sql
projFiles/classes/: ClassDiagram.mdj  IGui.cpp
sources/: AddMarkDialog.cpp  AddUserDialog.cpp  App.cpp  Attribute.cpp  CMakeLists.txt  City.cpp  DbManager.cpp  DbManager.cpp.bak  Event.cpp  Gui.cpp  Gui.cpp.bak  Link.cpp  MainForm.cpp  Object.cpp  Row.cpp  State.cpp  Theme.cpp  User.cpp  main.cpp
sources/include/: AddMarkDialog.h  AddUserDialog.h  App.h  App.h.bak  Attribute.h  City.h  Const.h  DbManager.h  DbManager.h.bak  Event.h  Gui.h  IDb.h  IGui.h  Link.h  Object.h  Row.h  State.h  Theme.h  User.h  libpq-fe.h  postgres_ext.h  stdafx.h  stdafx.h.bak
sources/ui/: Student_Storage.ui  add_mark_form.h  add_mark_form.h.bak  add_mark_form.ui  add_student_form.ui  ui_addstudent.h  ui_studentsstorage.h
